--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-    "name": "vendingmachine",
-    "version": "1.0.0",
-    "dependencies": {
-      "openzeppelin-solidity": "^2.3.0",
-      "zeppelin-solidity": "^1.12.0"
-    }
+  "name": "vendingmachine",
+  "version": "1.0.0",
+  "dependencies": {
+    "@openzeppelin/contracts": "^2.3.0"
   }
-  
+}
