--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vendingmachine",
   "version": "1.0.0",
   "dependencies": {
-    "@openzeppelin/contracts": "^2.3.0"
+    "@openzeppelin/contracts": "^2.3.0",
+    "truffle-assertions": "^0.9.1"
   }
 }
